mule-sdk/v/1.1/isolation.adoc
= About Classloading Isolation
:keywords: mule, sdk, classloading, isolation

The Mule 4 classloading schema isolates the runtime, apps, and modules from each other. Each specifies the packages (rather than the classes) to export as part of their API, making those specific packages visible.

Mule 3 classloading issues:

* Modules were not isolated from each other.
* Modules were not isolated from the Mule runtime.
* Modules were not isolated from Mule apps.

In Mule 3, modules that used some library could conflict with other modules, apps, or runtimes that used another version of the same library. This conflict led to classloading problems with confusing error messages like `ClassNotFoundException` or `NoSuchMethodException` that were hard to troubleshoot.

// TODO LINK TO MULE CLASS LOADING DOCS
// <<classloading-in-mule-4#, Learn more about classloading isolation in Mule 4>>

== Modules Classloading Isolation

Classloading is automatically filtered by package and not by class, meaning that modules need to specify which packages to export and make visible to the Mule app.

To determine what packages to export, the SDK introspects each configuration, connection, and component return and input types to get their packages. This means that you never want to share a package between an exported class and another class that you *don't* want to export.

The suggested package hierarchy (used internally for MuleSoft modules):

----
org.mule.module
\--> .api.*
\--> .internal.*
----

* `.api.*` contains all the classes that to be exported and seen by the Mule app: Return Types, Subtypes, Input Types, and Connection interfaces.
* `.internal.*` contains all the classes used for specific behavior of the module: Annotated classes, `Connection` and `Operation` implementations, and internal classes.

=== Knowing the Exported Packages and Return Types.

It is recommended that *all* exported classes belongs to the module, it s highly discouraged
and *never* recommended to return or receive objects from classes that belongs to a library
that the module is using, because could end up in a library clash resulting in a
module incompatible with other modules, app dependencies or even runtimes.

For example, think the next scenarios:

==== First Scenario: Exporting the same packages

We have two modules with two very different operations, both of them uses the same library for example _GSON_
which parses a json and returns an instance of a `JsonObject` class. One of them uses _GSON_ version `1.1` and
the other one _GSON_ version `2.3`. The `JsonObject` class lives in the same package in both
versions but the implementation is *very* different between each other, which made them incompatible.

The developers of the modules decided that it was a good idea to expose the `JsonObject`
class as the return type of their operation:


.First Module Operation
[source, java, linenums]
----
public JsonObject getEmployee(@Connection EmployeesServiceConnection connection, String id) {
  return new JsonObject(connection.getById(id));
}
----

.Second Module Operation
[source, java, linenums]
----
public JsonObject getAllProducts(@Connection ProductsServiceConnection connection) {
  return new JsonObject(connection.getProdsJson());
}
----

But now when deploying a mule application, and the mule developer tries to use both modules
that exports the same packages, mule will fail since you can't have two different plugins exporting
the same package.

==== Second Scenario: Returning two instances of the same Class in different versions.

Let's grab the example above, but this time both operations won't export the _GSON_ packages, instead
they return a `java.lang.Object`.

.First Module Operation
[source, java, linenums]
----
public Object getEmployee() {
  // Here JsonObject is from GSON 1.1
  return new JsonObject();
}
----

.Second Module Operation
[source, java, linenums]
----
public Object getAllProducts() {
  // Here JsonObject is from GSON 2.3
  return new JsonObject();
}
----

Now when the mule developer tries to use both modules and run the application, only one of the 2
versions will be loaded for the app, because both classes have exactly the same
fully qualified name, so the fully qualified names will clash, resulting in different behavior in one of the modules (the one that did not get its verfion of the package loaded), or resulting in errors such as
`ClassCastException`, `NoSuchMethodException`.

=== The @Export annotation

The @Export annotation can be used for extreme corner or complex cases when for some reason a module requires to export a class
that is not automatically exported by the SDK.

The `@Export` annotation receives an array of classes to be exported.

[WARNING]
Keep in mind that exporting a class will end up exporting all the classes in the same
package as the exported class.
